# cogno

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chainlit.md  compose.yml  lefthook.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  uwc_chainlit.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml  codeql.yml
app/: main.py
frontend/: .gitignore  document_processor.py  main.py  prompts.py  vision_client.py
frontend/.chainlit/: config.toml
frontend/public/: custom.css  theme.json
prisma/: schema.prisma
public/: theme.json
