[project]
name = "chainlit-datalayer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.40.14",
    "chainlit>=2.7.1.1",
    "google-auth>=2.40.3",
    "google-cloud-storage>=3.3.0",
    "ollama>=0.5.3",
]

[dependency-groups]
dev = [
    "lefthook>=1.12.3",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]
