[project]
name = "cogno"
version = "0.0.1"
description = "Front End Application for Cognoscere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.40.14",
    "chainlit>=2.7.1.1",
    "google-auth>=2.40.3",
    "numpy>=2.3.3",
    "ollama>=0.5.3",
    "openai>=1.109.1",
]

[dependency-groups]
dev = [
    "lefthook>=1.12.3",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]
